--- a/backend/package.json
+++ b/backend/package.json
@@ -50,6 +50,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
     "node-cron": "^3.0.3",
-    "nodemailer": "^6.10.0"
+    "nodemailer": "^6.10.0",
+    "socket.io": "^4.8.1"
   }
 }
