--- a/blog_app/package.json
+++ b/blog_app/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^19.0.0",
     "react-i18next": "^15.6.1",
     "react-router-dom": "^7.5.1",
+    "socket.io-client": "^4.8.1",
     "swr": "^2.3.3",
     "zustand": "^5.0.6"
   },
